// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Componenti/Section Esempio 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="section"
      style={
        Object {
          "background-image": Array [
            "url(undefined)",
          ],
        }
      }
    >
      <div
        className="section-content"
      >
        <div
          className="container"
        >
          <div
            className="mb-3 row"
          >
            <div
              className="col-12"
            >
              <h4>
                Morbi fermentum amet
              </h4>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </div>
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et. Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus.
            </div>
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Section Immagine di sfondo 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="section section-image"
      style={
        Object {
          "background-image": Array [
            "url(https://picsum.photos/1280/720?image=811)",
          ],
        }
      }
    >
      <div
        className="section-content"
      >
        <div
          className="white-color container"
        >
          <div
            className="mb-3 row"
          >
            <div
              className="col-12"
            >
              <h4>
                Morbi fermentum amet
              </h4>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </div>
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et. Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus.
            </div>
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Section Section con Card 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="section section-muted"
      style={
        Object {
          "background-image": Array [
            "url(undefined)",
          ],
        }
      }
      withCard={true}
    >
      <div
        className="section-content"
      >
        <div
          className="container"
        >
          <div
            className="mb-3 row"
          >
            <div
              className="col-12"
            >
              <h4>
                Morbi fermentum amet
              </h4>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="card-deck"
            >
              <div
                className="card shadow border-0 mg-md-4"
              >
                <div
                  className="card-body"
                >
                  <p
                    className="card-text"
                  >
                    Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus. Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et.
                     
                  </p>
                </div>
              </div>
              <div
                className="card shadow border-0 mg-md-4"
              >
                <div
                  className="card-body"
                >
                  <p
                    className="card-text"
                  >
                    Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus. Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Section Sfondo Neutrale 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="section section-neutral"
      style={
        Object {
          "background-image": Array [
            "url(undefined)",
          ],
        }
      }
    >
      <div
        className="section-content"
      >
        <div
          className="white-color container"
        >
          <div
            className="mb-3 row"
          >
            <div
              className="col-12"
            >
              <h4>
                Morbi fermentum amet
              </h4>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </div>
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et. Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus.
            </div>
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Section Sfondo Primario 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="section section-primary"
      style={
        Object {
          "background-image": Array [
            "url(undefined)",
          ],
        }
      }
    >
      <div
        className="section-content"
      >
        <div
          className="white-color container"
        >
          <div
            className="mb-3 row"
          >
            <div
              className="col-12"
            >
              <h4>
                Morbi fermentum amet
              </h4>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </div>
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et. Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus.
            </div>
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storyshots Componenti/Section Sfondo Tenue 1`] = `
<div
  style={
    Object {
      "boxSizing": "border-box",
      "margin": "0",
      "padding": "48px 32px",
      "position": "relative",
      "textAlign": "initial",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="section section-muted"
      style={
        Object {
          "background-image": Array [
            "url(undefined)",
          ],
        }
      }
    >
      <div
        className="section-content"
      >
        <div
          className="container"
        >
          <div
            className="mb-3 row"
          >
            <div
              className="col-12"
            >
              <h4>
                Morbi fermentum amet
              </h4>
            </div>
          </div>
          <div
            className="row"
          >
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Platea dictumst vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Dictum sit amet justo donec enim diam vulputate ut. Eu nisl nunc mi ipsum faucibus.
            </div>
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Eget egestas purus viverra accumsan. Diam maecenas ultricies mi eget mauris pharetra et. Etiam dignissim diam quis enim. Eu nisl nunc mi ipsum faucibus.
            </div>
            <div
              className="pr-0 pr-md-5 mb-3 col-12 col-lg-6 col-xl-4"
            >
              Euismod lacinia at quis risus sed vulputate. Scelerisque purus semper eget duis at tellus at urna condimentum. Mattis enim ut tellus elementum sagittis.
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
